# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "sqlite-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"    # error handling
clap = { version = "4.4.14", features = ["default"] }
itertools = "0.10.3" # useful iterator extensions
nom = "7.0.0"        # for parsing
peg = "0.7.0"        # for parsing
regex = "1.5.4"      # for parsing
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.35.1", features = ["full"] }
